
Changes and New Features in 1.0 (2021-02-04):
	* Importing rbart CRAN package to make it C++ header-only

Changes and New Features in 1.1 (2021-02-23):
	* Fix varcount uninitialized bug