@@ -5,8 +5,7 @@ export(plotFunctionDraws)
 export(hbartqqplot)
 export(xicuts)
 export(hbart_Rexport, hbart_Rimport, hbart_save, hbart_vartivity)
-importFrom(stats,cor)
 importFrom("graphics", "abline", "boxplot", "lines", "plot", "par", "points")
-importFrom("stats", "qqplot", "quantile", "rnorm", "runif", "sd")
+importFrom("stats", "cor", "lm", "qqplot", "quantile", "rnorm", "runif", "sd")
 importFrom(Rcpp, evalCpp)
 S3method(predict, hbart)
