@@ -2,3 +2,4 @@
 #include "cdotree.h"
 #include "cmbrt.h"
 #include "cpsambrt.h"
+#include "cphbart.h"
